--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,10 +1,4 @@
 .logo {
   margin-right: auto;
-}
-
-@media (max-width:500px) {
-  .logo {
-    width: 142px;
-    height: 42px;
-  }
+  text-decoration: none;
 }
