--- a/blocks/place/__urk-heading/place__urk-heading.css
+++ b/blocks/place/__urk-heading/place__urk-heading.css
@@ -1,9 +1,9 @@
 .place__urk-heading {
   margin: 0;
-  margin-bottom: 12px;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 0.2em;
+  text-transform: uppercase;
 }
