--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,36 +1,17 @@
 .cover__title {
   margin: 0;
-  padding-top: 245px;
   max-width: 560px;
   text-align: center;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
-}
-
-@media (max-width:1100px) {
-  .cover__title {
-    padding-top: 195px;
-  }
-}
-
-@media (max-width:900px) {
-  .cover__title {
-    padding-top: 115px;
-  }
+  z-index: 1;
 }
 
 @media (max-width:700px) {
   .cover__title {
-    padding-top: 180px;
     font-size: 32px;
     line-height: 35px;
-  }
-}
-
-@media (max-width:550px) {
-  .cover__title {
-    padding-top: 32px;
   }
 }
