--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -6,11 +6,11 @@
   font-size: 24px;
   line-height: 28px;
   border-bottom: solid 2px var(--main-bg-color);
-  transition: border-bottom 0.3s;
+  transition: border-bottom 0.3s, opacity 0.3s;
 }
 
 .header__lang:hover {
-  border-bottom: solid 2px var(--font-color);
+  opacity: 0.8;
 }
 
 @media (max-width:700px) {
