--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,6 @@
 .intro__list {
   margin: 0;
-  padding: 0;
-  padding-top: 33px;
+  padding: 32px 0 0 0;
   list-style: none;
   font-style: normal;
   font-weight: 700;
