--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 58px var(--padding-side-size-2) 0;
+  margin: 0 auto;
+  padding: 56px 0 0;
+  max-width: calc(100% - 2 * var(--padding-side-size-2));
 }
 
 @media (max-width:1100px) {
