--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,28 +1,5 @@
 .photo-grid {
-  --photo-grid__columns-num: 4;
-  display: grid;
-  gap: 16px;
-  padding: var(--sections-gap) var(--padding-side-size-1) 0;
-  grid-template-columns: repeat(var(--photo-grid__columns-num), 1fr)
-}
-
-@media (max-width:1100px) {
-  .photo-grid {
-    --photo-grid__columns-num: 3;
-    gap: 14px;
-  }
-}
-
-@media (max-width:900px) {
-  .photo-grid {
-    --photo-grid__columns-num: 2;
-    gap: 16px;
-  }
-}
-
-@media (max-width:700px) {
-  .photo-grid {
-    --photo-grid__columns-num: 1;
-    gap: 12px;
-  }
+  margin: 0 auto;
+  padding: var(--sections-gap) 0 0;
+  max-width: calc(100% - 2 * var(--padding-side-size-1));
 }
