--- a/root/root.css
+++ b/root/root.css
@@ -1,11 +1,13 @@
 :root {
+  /* --main-bg-color: #FFFFFF;
+  --font-color: #2A2C2F; */
   --main-bg-color: #2A2C2F;
   --font-color: #FFFFFF;
   --padding-side-size-1: 48px;
   --padding-side-size-2: 148px;
   --padding-side-size-3: 148px;
   --padding-side-size-4: 48px;
-  --sections-gap: 90px
+  --sections-gap: 92px
 }
 
 @media (max-width:1100px) {
@@ -21,7 +23,7 @@
     --padding-side-size-1: 24px;
     --padding-side-size-2: 0;
     --padding-side-size-3: 24px;
-    --sections-gap: 86px;
+    --sections-gap: 88px;
   }
 }
 
@@ -30,6 +32,6 @@
     --padding-side-size-1: 16px;
     --padding-side-size-2: 2px;
     --padding-side-size-3: 16px;
-    --sections-gap: 62px;
+    --sections-gap: 64px;
   }
 }
