--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,8 +4,8 @@
   max-width: calc(100% - 2 * var(--padding-side-size-3));
 }
 
-@media (max-width:700px) {
+@media (max-width:500px) {
   .places {
-    padding: var(--sections-gap) 0 0;
+    max-width: 100%;
   }
 }
